# 3sem_24

task_7/: task.txt
task_7/solution/client/: CMakeLists.txt  main.c
task_7/solution/client/include/: client.h
task_7/solution/client/src/: client.c
task_7/solution/server/: CMakeLists.txt  main.c
task_7/solution/server/include/: server.h
task_7/solution/server/src/: server.c
task_7/solution/util/: util.h
